--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,36 @@
     <application
         android:name=".App"
         android:allowBackup="true"
+        android:extractNativeLibs="true"
         android:icon="@mipmap/ic_launcher"
         android:label="MyYouTube"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat"
-        android:extractNativeLibs="true">
-        <activity android:name=".MainActivity"
+        android:theme="@style/Theme.AppCompat">
+        <service
+            android:name=".MediaPlaybackService"
+            android:enabled="true"
+            android:exported="false"></service>
+
+        <activity
+            android:name=".view.MainActivity"
             android:label="YouTube Player"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.SEARCH"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.SEARCH" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
+
+        <service
+            android:name=".MediaPlayerService"
+            android:exported="false" />
     </application>
 
 </manifest>
